# OpenCL-Samples

./: .gitmodules  README.md  build.bat
.github/: pull_request_template.md  workflow.yml
.github/workflows/: check_list_completed.yml
1_BasicPrograms/BasicQueries/: CMakeLists.txt  main.cpp
1_BasicPrograms/ContextAndCommandQueue/: CMakeLists.txt  main.cpp
1_BasicPrograms/Histogram/: CMakeLists.txt  main.cpp
BasicSetup/BasicTemplate/: CMakeLists.txt  main.cpp
BasicSetup/CreateAndBuildProgram/: main.cpp
BasicSetup/CreateBuffer/: CMakeLists.txt  main.cpp
BasicSetup/QueringDevices/: main.cpp
BasicSetup/QueringPlatforms/: main.cpp
OpenCL-CLHPP-Examples/: CMakeLists.txt
OpenCL-CLHPP-Examples/PrintPlatformsAndDevices/: CMakeLists.txt
OpenCL-CLHPP-Examples/VectorAdd/: CMakeLists.txt  main.cpp
OpenCL-CLHPP-Examples/cl-src/: CMakeLists.txt  gaussElimination.cl  v2scalar.cl  v2v.cl  vadd.cl
OpenCL-CLHPP-Examples/gaussian-elimination/: CMakeLists.txt  main.cpp
OpenCL-CLHPP-Examples/print-platforms-and-devices/: CMakeLists.txt  main.cpp
OpenCL-CLHPP-Examples/unit-test/: main.cpp
OpenCL-CLHPP-Examples/utils/: CMakeLists.txt  utils.cpp  utils.h
OpenCL-CLHPP-Examples/vec2scalar/: CMakeLists.txt  main.cpp
OpenCL-CLHPP-Examples/vec2vec/: CMakeLists.txt  main.cpp
OpenCL-CLHPP-Examples/vector-add/: CMakeLists.txt  main.cpp
Simple-OpenCL-Program/: CMakeLists.txt  host.cpp
Simple-OpenCL-Program/BasicTemplate/: CMakeLists.txt  main.cpp
Simple-OpenCL-Program/Common/: CMakeLists.txt  common.cpp  common.h
Simple-OpenCL-Program/MatrixVectorMult/: host.cpp
Simple-OpenCL-Program/ParallelDotProduct/: CMakeLists.txt  device.cl  host.cpp
Simple-OpenCL-Program/ParallelSum/: CMakeLists.txt
Simple-OpenCL-Program/VectorSumParallel/: CMakeLists.txt  device.cl  host.cpp
SimpleMath/Common/: CMakeLists.txt  common.h
SimpleMath/MatrixVectorMult/: CMakeLists.txt  device.cl
SimpleMath/VectorSumParallel/: CMakeLists.txt  host.cpp
Tutorials/CreateContextAndCommandQueue/: CMakeLists.txt  main.cpp
